# Phoenix-SmartCaseAI

./: .gitignore  API_KEYS_SETUP.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  GITHUB_SETUP.md  INSTALL.md  LICENSE  MANIFEST.in  PACKAGING_GUIDE.md  PROJECT_STRUCTURE.md  Phoenix-SmartCaseAI-Presentation.html  README.md  SERVER_GUIDE.md  check_api_keys.py  config.py  deploy.sh  docker-compose.yml  env.example  example_all.py  example_claude.py  example_file_analysis.py  example_gemini.py  example_openai.py  example_usage.py  project_report.html  pyproject.toml  requirements.txt  server_manager.py  setup.cfg  setup_env.py  start_api_server.py  start_server.bat  start_server.sh  stop_server.bat  stop_server.sh  test_report.md
.github/workflows/: deploy-web-interface.yml  manual-deploy.yml  quick-deploy.yml  simple-deploy.yml  test-case-generator.yml
SmartCaseAI/: __init__.py  cli.py  file_analyzer.py  generator.py
api-server/: README.md  app.py  render.yaml  requirements.txt
api-server/outputs/224987cd-b48a-439f-a542-0a94d0044486/: 224987cd-b48a-439f-a542-0a94d0044486_bdd.md  224987cd-b48a-439f-a542-0a94d0044486_plain.md
api-server/outputs/36b7460e-a67a-49c8-a0e5-34fbfddae414/: 36b7460e-a67a-49c8-a0e5-34fbfddae414_bdd.md  36b7460e-a67a-49c8-a0e5-34fbfddae414_plain.md
api-server/outputs/5b283e8f-aa3e-4a48-8177-9169bbb111e0/: 5b283e8f-aa3e-4a48-8177-9169bbb111e0_bdd.md  5b283e8f-aa3e-4a48-8177-9169bbb111e0_plain.md
api-server/outputs/5b283e8f-aa3e-4a48-8177-9169bbb111e0/input_files/: user_story.txt
api-server/outputs/64040d05-1115-45b9-bbba-611873618042/: 64040d05-1115-45b9-bbba-611873618042_bdd.md  64040d05-1115-45b9-bbba-611873618042_plain.md
api-server/outputs/64040d05-1115-45b9-bbba-611873618042/input_files/: user_story.txt
api-server/outputs/731027eb-d1b0-4eb3-bedd-7b6c7ed66d44/: 731027eb-d1b0-4eb3-bedd-7b6c7ed66d44_bdd.md  731027eb-d1b0-4eb3-bedd-7b6c7ed66d44_plain.md
api-server/outputs/792ceed8-93c1-4d3d-bee7-36d05e7437df/: 792ceed8-93c1-4d3d-bee7-36d05e7437df_bdd.md  792ceed8-93c1-4d3d-bee7-36d05e7437df_plain.md
api-server/outputs/7ec038f3-4f18-431b-a027-0b379190e9bb/: 7ec038f3-4f18-431b-a027-0b379190e9bb_bdd.md  7ec038f3-4f18-431b-a027-0b379190e9bb_plain.md
api-server/outputs/cc8be7b8-7eb5-4bef-8dde-c3c010134a6c/: cc8be7b8-7eb5-4bef-8dde-c3c010134a6c_bdd.md  cc8be7b8-7eb5-4bef-8dde-c3c010134a6c_plain.md
api-server/outputs/cc8be7b8-7eb5-4bef-8dde-c3c010134a6c/input_files/: payment_requirements.txt  payment_ui_mockup.txt
api-server/outputs/d5f55342-036b-4407-b0cd-bc13b868eee1/: d5f55342-036b-4407-b0cd-bc13b868eee1_bdd.md  d5f55342-036b-4407-b0cd-bc13b868eee1_plain.md
api-server/outputs/d9f9ea90-0c24-4431-896e-f117bc4766ca/: d9f9ea90-0c24-4431-896e-f117bc4766ca_bdd.md  d9f9ea90-0c24-4431-896e-f117bc4766ca_plain.md
api-server/outputs/d9f9ea90-0c24-4431-896e-f117bc4766ca/input_files/: payment_portal_user_story.txt  payment_test_data.csv
api-server/outputs/ef6fb5a5-d643-4e71-adf6-0469380f6ff7/: ef6fb5a5-d643-4e71-adf6-0469380f6ff7_bdd.md  ef6fb5a5-d643-4e71-adf6-0469380f6ff7_plain.md
api-server/outputs/fd598f20-b773-4322-9dc9-c3799d552975/: fd598f20-b773-4322-9dc9-c3799d552975_bdd.md  fd598f20-b773-4322-9dc9-c3799d552975_plain.md
backend/: .env  .env.example  app.py  config.py  requirements-llama.txt  requirements.txt
backend/embeddings/: vector_store.py
backend/integrations/: __init__.py  base.py  registry.py
backend/integrations/jira/: __init__.py  provider.py
backend/integrations/testrail/: __init__.py  publisher.py
backend/knowledge/: test-cases-knowledge.md  weblocator-knowledge.md
backend/services/: document_parser.py  export_service.py  jirafetch.py  knowledge_base.py  llm.py  llm_engine.py  multi_xml_loader.py  testrail.py  xmlparser.py
backend/storage/: activity_log.json  latest_cases.json  rejection_reasons.md
backend/utils/: dom_locator_parser.py  output_validator.py  prompt_builder.py  response_parser.py
demo_output/: demo_test_cases_bdd.md  demo_test_cases_plain.md
examples/: README.md
examples/payment_portal/claude/: payment_portal_claude_bdd_20250930_105309.md  payment_portal_claude_bdd_20250930_141524.md  payment_portal_claude_plain_20250930_105309.md  payment_portal_claude_plain_20250930_141524.md
examples/payment_portal/gemini/: payment_portal_gemini_bdd_20250929_221854.md  payment_portal_gemini_plain_20250929_221854.md
examples/payment_portal/openai/: payment_portal_openai_bdd_20250929_220352.md  payment_portal_openai_bdd_20250929_225237.md  payment_portal_openai_plain_20250929_220352.md  payment_portal_openai_plain_20250929_225237.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: AppLayout.jsx  ErrorBoundary.jsx  ExportButtons.jsx  IssueDataPanel.jsx  JiraForm.jsx  LoadingOverlay.jsx  LocatorForm.jsx  LocatorResults.jsx  StepFlow.jsx  TestCaseTable.jsx  ToastStack.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/pages/: Dashboard.jsx  ExportPublish.jsx  Home.jsx  ReviewQueue.jsx  Settings.jsx
frontend/src/services/: api.js
frontend/src/utils/: error.js  modelOptions.js
input_files/: README.md  business_rules.xml  payment_api_specification.json  security_guidelines.txt
src/phoenix_smartcaseai/: __init__.py  _version.py  generator.py  main.py  unified_file_analyzer.py  web_app.py
tests/: __init__.py  test_generator.py  test_web_app.py
web-interface/: index.html
web-interface-simple/: index.html
web-interface-two-panel/: index.html
web-interface-working/: index.html
