[metadata]
name = phoenix-smartcaseai
version = 1.0.0
description = AI-powered test case generation from user stories using LLMs
long_description = file: README.md
long_description_content_type = text/markdown
author = Phoenix SmartCase AI
author_email = support@phoenixsmartcase.ai
license = MIT
license_file = LICENSE
url = https://github.com/shaktitrigent/Phoenix-SmartCaseAI
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pydantic>=2.11.0,<3.0.0
    langchain-core>=0.3.76,<0.4.0
    langchain-openai>=0.3.30,<0.4.0
    langchain-google-genai>=2.0.0,<3.0.0
    langchain-anthropic>=0.3.0,<0.4.0
    python-docx>=0.8.11,<1.0.0
    pandas>=2.0.0,<3.0.0
    openpyxl>=3.1.0,<4.0.0
    PyPDF2>=3.0.0,<4.0.0
    pdfplumber>=0.9.0,<1.0.0
    Pillow>=10.0.0,<11.0.0
    pytesseract>=0.3.10,<1.0.0
    fastapi>=0.104.0,<1.0.0
    uvicorn[standard]>=0.24.0,<1.0.0
    python-dotenv>=1.0.0,<2.0.0
    jinja2>=3.1.0,<4.0.0
    python-multipart>=0.0.6,<1.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    phoenix-smartcase = phoenix_smartcaseai.cli:main
    phoenix-smartcaseai = phoenix_smartcaseai.main:main


